rnsc/test_data/integration/error/parser/type_hints/int/trailing_tokens.rns
.class @int 42 unexpected_second_operand
.super java/lang/Object